# server/src/openapi.spec.json
@@ -16,6 +16,7 @@
       "get": {
         "summary": "Hello world",
         "description": "This is a test endpoint, it simply returns hello world.",
+        "tags": ["misc"],
         "parameters": [],
         "security": [],
         "responses": {
@@ -39,6 +40,158 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/stats" : {
+      "get": {
+        "tags": ["misc"],
+        "summary": "Get statistics",
+        "description": "Retrieves various statistics about the application, such as the number of employees, locations, and more. Only accessible to administrators.",
+        "security": [{"BearerJwt": []}],
+        "parameters": [],
+        "operationId": "getStatistics",
+        "responses": {
+          "200": {
+            "description": "The request was successful, and the statistics were retrieved.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "title": "GetStatisticsOk",
+                  "required": ["code", "data"],
+                  "properties": {
+                    "code": {
+                      "type": "string",
+                      "enum": ["success"]
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "number_of"
+                      ],
+                      "properties": {
+                        "number_of": {
+                          "type": "object",
+                          "required": [
+                            "employees",
+                            "locations",
+                            "roles",
+                            "invitations"
+                          ],
+                          "properties": {
+                            "employees": {
+                              "type": "integer",
+                              "example": 5
+                            },
+                            "groups": {
+                              "type": "integer",
+                              "example": 11
+                            },
+                            "invites": {
+                              "type": "integer",
+                              "example": 1
+                            },
+                            "lessons": {
+                              "type": "object",
+                              "required": [
+                                "past", "future", "total"
+                              ],
+                              "properties": {
+                                "past": {
+                                  "type": "integer",
+                                  "example": 10
+                                },
+                                "future": {
+                                  "type": "integer",
+                                  "example": 5
+                                },
+                                "total": {
+                                  "type": "integer",
+                                  "example": 15
+                                }
+                              }
+                            },
+                            "locations": {
+                              "type": "integer",
+                              "example": 8
+                            },
+                            "students": {
+                              "type": "integer",
+                              "example": 40
+                            },
+                            "subjects": {
+                              "type": "integer",
+                              "example": 12
+                            }
+                          }
+                        },
+                        "income": {
+                          "type": "object",
+                          "required": [
+                            "total", "today", "this_week", "this_month"
+                          ],
+                          "properties": {
+                            "total": {
+                              "type": "number",
+                              "format": "float",
+                              "example": 12345.67
+                            },
+                            "today": {
+                              "type": "number",
+                              "format": "float",
+                              "example": 100.00
+                            },
+                            "this_week": {
+                              "type": "number",
+                              "format": "float",
+                              "example": 500.00
+                            },
+                            "this_month": {
+                              "type": "number",
+                              "format": "float",
+                              "example": 2000.00
+                            }
+                          }
+                        },
+                        "worked_hours": {
+                          "type": "object",
+                          "required": [
+                            "total", "today", "this_week", "this_month"
+                          ],
+                          "properties": {
+                            "total": {
+                              "type": "number",
+                              "format": "float",
+                              "example": 1234.56
+                            },
+                            "today": {
+                              "type": "number",
+                              "format": "float",
+                              "example": 8.00
+                            },
+                            "this_week": {
+                              "type": "number",
+                              "format": "float",
+                              "example": 40.00
+                            },
+                            "this_month": {
+                              "type": "number",
+                              "format": "float",
+                              "example": 160.00
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
           }
         }
       }
